updating app to use environment variables for API requests

--- a/env.sample.env
+++ b/env.sample.env
@@ -1,6 +1,2 @@
-site_url=themoviedb.org
-site_user=
-site_pw=
-
-
-
+VITE_API_BASE_URL=https://api.themoviedb.org/3
+VITE_API_KEY=**************************
